# subql-graphql-agent

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: prod-build.yml
examples/: server.py  working_example.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  ConfirmDialog.tsx  HealthStatus.tsx  ProjectConfig.tsx  ProjectList.tsx  ProjectRegistration.tsx
frontend/src/hooks/: useChat.ts  useProjects.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
graphql_agent/: __init__.py  base.py  graphql.py  tools.py
projects/: QmQdXbM7LSmhDAXxTc5ZNDfYuGHDAqPhDGAJ58YX5nUa8D.json  QmSTAihe2uJUFEmuzPM6KxQ18X82fKTgZeeC3tfQrte9Bk.json
