[project]
name = "subql-graphql-agent"
version = "0.1.0"
description = "GraphQL agent toolkit for LLM interactions with SubQuery APIs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "graphql-core>=3.2.0",
    "aiohttp>=3.9.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["graphql_agent"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
]
